Added tourList and tour component

--- a/src/index.scss
+++ b/src/index.scss
@@ -7,3 +7,9 @@ body {
   padding: 0;
   box-sizing: border-box;
 }
+
+$mainBlack: #333;
+$mainGreen: rgb(51, 103, 63);
+$mainWhite: rgb(220, 196, 196);
+$mainGrey: rgba(230, 223, 223, 0.44);
+$mainTransition: all 0.3s linear;
