--- a/src/components/Tour/tour.scss
+++ b/src/components/Tour/tour.scss
@@ -16,6 +16,7 @@
 }
 
 .close-btn {
+  color: white;
   position: absolute;
   display: block;
   right: 5%;
@@ -33,10 +34,30 @@
 .tour-info {
   padding: 1rem 0.5rem;
   h3 {
+    font-family: monospace;
     text-transform: uppercase;
-    color: black;
+    font-size: 1.5rem;
+    margin-bottom: 0.8rem;
   }
   h4 {
+    text-transform: capitalize;
+    margin: 0 0.5rem 0.5rem 0;
+    font-style: italic;
+  }
+  h5 {
+    text-transform: capitalize;
+    font-family: monospace;
+    font-size: 1.3rem;
+    margin: 0 0.5rem 0.5rem 0;
+    span {
+      color: black;
+      font-size: 0.8rem;
+      cursor: pointer;
+      transition: $mainTransition;
+      &:hover {
+        color: $mainGreen;
+      }
+    }
   }
 }
 
